--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <p class="section-description">We have integrated the latest weather data for the year 2023, sourced directly from Jyväskylä Airport. The data was retrieved from the Finnish Meteorological Institute's (FMI) open data platform. This addition enhances our analysis capabilities and ensures more accurate and up-to-date weather-related insights.</p>
         <div class="features-grid">
             <div class="feature-card">
-                <img src="/airport_weather_data_DF.JPG" alt="Source Data Overview">
+                <img src="airport_weather_data_DF.JPG" alt="Source Data Overview">
             </div>
         </div>
     </section>
@@ -184,10 +184,10 @@
             The Tie 4 dataset contained several similar columns, with some missing data.<br>
             Used similar columns within the Tie 4 dataset to impute missing values effectively.</p>
         <div class="features-grid">
-            <div class="feature-card"><img src="/Section 2/1 (1).JPG" alt="Processing Image 1"></div>
-            <div class="feature-card"><img src="/Section 2/1 (1).png" alt="Processing Image 2"></div>
-            <div class="feature-card"><img src="/Section 2/1 (2).JPG" alt="Processing Image 3"></div>
-            <div class="feature-card"><img src="/Section 2/1 (3).JPG" alt="Processing Image 4"></div>
+            <div class="feature-card"><img src="../Section 2/1 (1).JPG" alt="Processing Image 1"></div>
+            <div class="feature-card"><img src="../Section 2/1 (1).png" alt="Processing Image 2"></div>
+            <div class="feature-card"><img src="../Section 2/1 (2).JPG" alt="Processing Image 3"></div>
+            <div class="feature-card"><img src="../Section 2/1 (3).JPG" alt="Processing Image 4"></div>
         </div>
     </section>
 
