--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
             retaining Tie 4's original columns to analyze distributions and correlations.<br>
             Identified missing values in the merged dataset and used the interpolation method to impute them by averaging adjacent data points in the same column.</p>
         <div class="features-grid">
-            <div class="feature-card"><img src="/Section 3/1 (1).JPG" alt="Integration Image 1"></div>
-            <div class="feature-card"><img src="/Section 3/1 (2).JPG" alt="Integration Image 2"></div>
+            <div class="feature-card"><img src="./Section 3/1 (1).JPG" alt="Integration Image 1"></div>
+            <div class="feature-card"><img src="./Section 3/1 (2).JPG" alt="Integration Image 2"></div>
         </div>
     </section>
 
@@ -211,10 +211,10 @@
             Evaluated the distribution of dewpoint from Tie 4 and airport weather columns to confirm if they aligned and supported reliance on the imputation method.<br>
             Analyzed how dewpoint, relative humidity, and friction are distributed with snow. Observed that friction decreases significantly with moderate snow at temperatures between -10°C and 0°C, and further drops under high humidity conditions.</p>
         <div class="features-grid">
-            <div class="feature-card"><img src="/Section 4/1 (1).png" alt="Correlation Analysis 1"></div>
-            <div class="feature-card"><img src="/Section 4/1 (2).png" alt="Correlation Analysis 2"></div>
-            <div class="feature-card"><img src="/Section 4/1 (3).png" alt="Correlation Analysis 3"></div>
-            <div class="feature-card"><img src="/Section 4/1 (4).png" alt="Correlation Analysis 4"></div>
+            <div class="feature-card"><img src="./Section 4/1 (1).png" alt="Correlation Analysis 1"></div>
+            <div class="feature-card"><img src="./Section 4/1 (2).png" alt="Correlation Analysis 2"></div>
+            <div class="feature-card"><img src="./Section 4/1 (3).png" alt="Correlation Analysis 3"></div>
+            <div class="feature-card"><img src="./Section 4/1 (4).png" alt="Correlation Analysis 4"></div>
         </div>
     </section>
 
