--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             Initially, the data was in JSON format, and after converting it into .csv files, each dataset had 21 columns.<br>
             Through data reduction, we successfully narrowed down the columns to the 12 most important ones.</p>
         <div class="features-grid">
-            <div class="feature-card"><img src="/section 5/1 (1).png" alt="Marwis Sensor Data 1"></div>
-            <div class="feature-card"><img src="/section 5/1 (2).png" alt="Marwis Sensor Data 2"></div>
-            <div class="feature-card"><img src="/section 5/1 (3).png" alt="Marwis Sensor Data 3"></div>
+            <div class="feature-card"><img src="./section 5/1 (1).png" alt="Marwis Sensor Data 1"></div>
+            <div class="feature-card"><img src="./section 5/1 (2).png" alt="Marwis Sensor Data 2"></div>
+            <div class="feature-card"><img src="./section 5/1 (3).png" alt="Marwis Sensor Data 3"></div>
         </div>
     </section>
 
