--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Jyväskylä Airport Weather Data</title>
+    <title>TribologAI</title>
     <style>
         * {
             margin: 0;
@@ -163,11 +163,11 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo">New Jyväskylä <span>Airport</span> Weather <span>Data</span></div>
+        <div class="logo"> Tribolog<span>AI</span></div>
     </nav>
 
     <section class="section-container first-section">
-        <h2 class="section-title">Weather Data Update: 2023 Insights from Jyväskylä Airport</h2>
+        <h2 class="section-title"> TribologAI</h2>
         <p class="section-description">We have integrated the latest weather data for the year 2023, sourced directly from Jyväskylä Airport. The data was retrieved from the Finnish Meteorological Institute's (FMI) open data platform. This addition enhances our analysis capabilities and ensures more accurate and up-to-date weather-related insights.</p>
         <div class="features-grid">
             <div class="feature-card">
@@ -262,11 +262,11 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <div class="logo">New Jyväskylä <span>Airport</span> Weather <span>Data</span></div>
+            <div class="logo"> Tribolog<span>AI</span></div>
             <p>The analyses and findings presented above are based on comprehensive data processing, cleaning, and correlation assessments. The insights derived from this study highlight the reliability of imputed data and its alignment with observed trends, providing a robust foundation for further analysis and application in weather-related studies.</p>
         </div>
         <div class="copyright">
-            © 2024 New Jyväskylä <span>Airport</span> Weather <span>Data</span>. All rights reserved.
+            © 2024  TribologAI<span>AI</span>. All rights reserved.
         </div>
     </footer>
 </body>
