--- a/index.html
+++ b/index.html
@@ -311,6 +311,25 @@
             <div class="feature-card"><img src="./section 5/1 (3).png" alt="Marwis Sensor Data 3"></div>
         </div>
     </section>
+    <!--Section 6-->
+    <section class="section-container">
+        <h2 class="section-title">Initial DataSets</h2>
+        <p class="section-description">
+            Collected Marwis mobile sensor data comprising three datasets: the first with approximately 1 million data points, and the second and third with over half a million each, totaling more than 2 million data points.<br>
+            Initially in JSON format, the data was converted into .csv files, each containing 21 columns.<br>
+            Reduced the number of columns to the 12 most important ones for analysis.<br>
+            Cleaned the data by addressing all missing, zero, duplicate, negative, outlier, and NaN values.<br>
+            Created a Missing Values Heatmap to visualize and verify the absence of missing data.<br>
+            Generated a Feature Association Matrix to explore relationships and correlations between features.
+        </p>
+        <div class="features-grid">
+            <div class="feature-card"><img src="./section 5/1 (1).png" alt="Marwis Sensor Data 1"></div>
+            <div class="feature-card"><img src="./section 5/1 (2).png" alt="Marwis Sensor Data 2"></div>
+            <div class="feature-card"><img src="./section 5/1 (2).png" alt="Marwis Sensor Data 2"></div>
+            <div class="feature-card"><img src="./section 5/1 (3).png" alt="Marwis Sensor Data 3"></div>
+            <div class="feature-card wider-card "><img src="./section 5/1 (3).png" alt="Marwis Sensor Data 3"></div>
+        </div>
+    </section>
 
     <!-- Modal -->
     <div class="image-modal" id="imageModal">
