--- a/index.html
+++ b/index.html
@@ -330,10 +330,10 @@
             Generated a Feature Association Matrix to explore relationships and correlations between features.
         </p>
         <div class="features-grid">
-            <div class="feature-card"><img src="./section 6/1 (1).png" alt="Marwis Sensor Data 1"></div>
-            <div class="feature-card"><img src="./section 6/1 (2).png" alt="Marwis Sensor Data 2"></div>
-            <div class="feature-card"><img src="./section 6/1 (3).png" alt="Marwis Sensor Data 2"></div>
-            <div class="feature-card"><img src="./section 6/1 (4).png" alt="Marwis Sensor Data 3"></div>
+            <div class="feature-card"><img src="./section 6/1 (1).png" alt="1"></div>
+            <div class="feature-card"><img src="./section 6/1 (2).png" alt="2"></div>
+            <div class="feature-card"><img src="./section 6/1 (3).png" alt="3"></div>
+            <div class="feature-card"><img src="./section 6/1 (4).png" alt="4"></div>
             <div class="feature-card wider-card"><img src="./section 6/1 (5).png" alt="Marwis Sensor Data 3"></div>
         </div>
     </section>
